Search Bar & Status

--- a/website/templates/event/displayevent.html
+++ b/website/templates/event/displayevent.html
@@ -20,7 +20,7 @@
         <div class="card my-3">  
           <div class="card-body">  
             <div class="media">  
-
+              <img class="align-self-start mr-3" src="{{events.image}}">  
               <div class="media-body">  
                 <small class="font-weight-bold text-muted">Only limited tickets avaliable</small>  
                 <h3 class="mt-0">{{events.eventname}}</h3>
