--- a/website/templates/event_detail.html
+++ b/website/templates/event_detail.html
@@ -106,16 +106,12 @@ content %}
     <div class="col-12 col-md-9 col-lg-7 col-xl-6">
       <div class="card" style="border-radius: 5px">
         <div class="card-body p-15">
-          <h2 class="text-uppercase text-center mb-5">
-            {{event.eventname}}
-          </h2>
+          <h2 class="text-uppercase text-center mb-5">{{event.eventname}}</h2>
           <h3 class="text-center">Upcoming</h3>
 
           <div class="event-outline mb-4">
             <h4>Description</h4>
-            <p>
-              {{event.description}}
-            </p>
+            <p>{{event.description}}</p>
           </div>
 
           <div class="event-outline mb-4">
@@ -140,45 +136,55 @@ content %}
 
           <div class="form-outline mb-4">
             <form method="POST">
-            <input type="Ticket Quantity" id="quantity" name = "quantity" class="form-control form-control-lg"/>
+              <input
+                type="Ticket Quantity"
+                id="quantity"
+                name="quantity"
+                class="form-control form-control-lg"
+              />
             </form>
             <label class="form-label" for="Quantity"
               >Ticket Quantity: 1-{{event.ticketamount}} max</label
             >
           </div>
 
-
-
-          <div class="d-flex justify-content-center" >
+          <div class="d-flex justify-content-center">
             <form action="/event_detail/{{event.id}}/booking" method="POST">
-            <button type="submit" class="btn btn-primary">Book Tickets</button>
-            <!-- <a href="" class="btn btn-primary" action="/event_detail/{{event.id}}/booking">Buy Tickets</a> -->
-          </form>
+              <button type="submit" class="btn btn-primary">
+                Book Tickets
+              </button>
+              <!-- <a href="" class="btn btn-primary" action="/event_detail/{{event.id}}/booking">Buy Tickets</a> -->
+            </form>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
-<img
-  src="https://www.google.com/maps/d/u/0/thumbnail?mid=1qDVctC95p9yzCho6a6XEek9OVHY&hl=en"
-  class="rounded mx-auto d-block"
-  alt="maps"
-/>
-
-<h2 class="page-header">Comments</h2>
-<img src="https://cdn-icons-png.flaticon.com/128/149/149071.png" />
-
-<article class="row">
-  <div class="col-md-2 col-sm-2 hidden-xs"></div>
-  <div class="col-md-10 col-sm-10">
-    <div class="comment-post">
-
-      <div class="col-md-10 col-sm-10">
-
-      </div>
-    </div>
+<div>
+  <div class="card">
+    <div class="card-text">{{event.comment}}</div>
+    <br />
+    {% for comment in event.comments %}
+    <div class="d-flex justify-content-between align-items-center"></div>
+    {{ comment.comment }} {% endfor %}
+    <br />
   </div>
-</article>
+  <br />
+  <form
+    class="input group mb-3"
+    method="POST"
+    action="/post-comment/{{event.id}}"
+  >
+    <label
+      for="colFormLabelLg"
+      class="col-sm-2 col-form-label col-form-label-lg"
+      >Comment</label
+    >
+    <label for="colFormLabelLg" class="form-control">{{form.comment}}</label>
+    <div class="col-md-10 col-sm-10">
+      {{ form.submit(class="btn btn-outline-info") }}
+    </div>
+  </form>
+</div>
 {% endblock %}
