--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -48,41 +48,37 @@
         {% if user.is_authenticated %}
         <ul>
           <li><a href="/"> Home </a></li>
-          <li><a href="event_creation">Create an Event</a></li>
-          <li><a href="user_booking">Bookings</a></li>
-          <li><a href='logout'>Logout</a></li>
+          <li><a href="/event_creation">Create an Event</a></li>
+          <li><a href="/user_booking">Bookings</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
         {% else %}
         <ul>
           <li><a href="/"> Home </a></li>
-          <li><a href="event_creation">Create an Event</a></li>
-          <li><a href="user_booking">Bookings</a></li>
-          <li><a href="login">Login</a></li>
-          <li><a href="sign_up">Sign up</a></li>
+          <li><a href="/event_creation">Create an Event</a></li>
+          <li><a href="/user_booking">Bookings</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/sign_up">Sign up</a></li>
         </ul>
         {% endif %}
       </nav>
-      {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-          {% for category, message in messages %}
-            {% if category == 'error' %}
-            <div class="alert alert-danger alter-dismissable fade show" role="alert">
-              {{ message }}
-              <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            {% else %}
-            <div class="alert alert-success alter-dismissable fade show" role="alert">
-              {{ message }}
-              <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            {% endif %}
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %} {% for category, message in messages %} {% if category ==
+      'error' %}
+      <div class="alert alert-danger alter-dismissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% else %}
+      <div class="alert alert-success alter-dismissable fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endif %} {% endfor %} {% endif %} {% endwith %}
     </header>
     <div class="container">{% block content %} {% endblock %}</div>
   </body>
